--- a/client/views/mybookings.html
+++ b/client/views/mybookings.html
@@ -43,59 +43,51 @@
         <button class="btn btn-primary btn-xs pull-right btn-filter" type="submit" ng-click="clientDashCtrl.boxing()">Boxing</button>
         <button class="btn btn-danger btn-xs pull-right btn-filter" type="submit" ng-click="clientDashCtrl.crossfit()">Crossfit</button>
     </div>
-
-    <div class="row" ng-repeat="class in clientDashCtrl.classes">
-        
-        <div class="panel panel-primary trainer-panel">
-            <div class="panel-heading">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <b>{{class.class.name}}</b>
-                    </div>
-                    <div class="col-lg-6">
-                        <button type="button" class="btn btn-default btn-xs pull-right" ng-click="clientDashCtrl.viewClass(class.class.id)"><span class="glyphicon glyphicon-eye-open"></span> View Class Details</button>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <b>Details:</b> {{class.class.details}}
-                    </div>
-                    <div class="col-lg-4">
-                        <b>Category:</b> {{class.class.category}}
-                    </div>
-                    <div class="col-lg-4">
-                        <b>Class Size (Min/Max):</b> {{class.class.minsize}}/{{class.class.maxsize}}
+     
+    <div class="row">
+        <div class="col-lg-4" ng-repeat="class in clientDashCtrl.classes">
+            <div class="panel panel-primary trainer-panel">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-lg-7">
+                            <b>{{class.class.name}}</b>
+                        </div>
+                        <div class="col-lg-5">
+                            <b>Category:</b> {{class.class.category}}
+                        </div>
+                        
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <b>Start Date and Time:</b> {{class.class.start_time}}
+            
+                <div class="panel-body">
+                    <div class="row pb-back">
+                        <img ng-src="../images/crossfit.jpg" width="498" height="200" ng-show="class.class.category == 'Crossfit'">
+                        <img ng-src="../images/core.jpg" width="498" height="200" ng-show="class.class.category == 'Core'">
+                        <img ng-src="../images/mma.jpg" width="498" height="200" ng-show="class.class.category == 'MMA'">
+                        <img ng-src="../images/boxing.jpg" width="498" height="200" ng-show="class.class.category == 'Boxing'">
+                        <img ng-src="../images/weights.jpg" width="498" height="200" ng-show="class.class.category == 'Weights'">
+                        <img ng-src="../images/aerobics.jpg" width="498" height="200" ng-show="class.class.category == 'Aerobics'">
                     </div>
-                    <div class="col-lg-4">
-                        <b>Duration (minutes):</b> {{class.class.duration}}
-                    </div>
-                    <div class="col-lg-4">
-                        <b>District:</b> {{class.class.neighbourhood}}
+                    <div class="row rowdata">
+                        <div class="col-lg-7">
+                            <b>Date/Time:</b> {{class.class.start_time}}
+                        </div>
+                        <div class="col-lg-5">
+                            <b>District:</b> {{class.class.neighbourhood}}
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="panel-footer">
-                <div class="col-lg-4">
-                    <b>Status:</b> {{class.class.status}}
-                </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <b>Created:</b> {{class.class.createdAt}}
-                    </div>
-                    <div class="col-lg-4">
-                        <b>Updated:</b> {{class.class.updatedAt}}
+                <div class="panel-footer">
+                    <div class="row">
+                        <div class="col-lg-7">
+                            <b>Status:</b> {{class.class.status}}
+                        </div>
+                        <div class="col-lg-5">
+                            <button type="button" class="btn btn-default btn-xs pull-left" ng-click="clientDashCtrl.viewClass(class.id)"><span class="glyphicon glyphicon-eye-open"></span> View Class Details</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
 </div>
