Trainer Dash - removed District, replaced with Student count

--- a/client/views/trainerdash.html
+++ b/client/views/trainerdash.html
@@ -70,7 +70,7 @@
                             <b>Date/Time:</b> {{class.start_time}}
                         </div>
                         <div class="col-lg-5">
-                            <b>District:</b> {{class.neighbourhood}}
+                            <b>Students:</b> {{class.bookingCount}}
                         </div>
                     </div>
                 </div>
