--- a/client/views/mybookings.html
+++ b/client/views/mybookings.html
@@ -83,7 +83,7 @@
                             <b>Status:</b> {{class.class.status}}
                         </div>
                         <div class="col-lg-5">
-                            <button type="button" class="btn btn-default btn-xs pull-left" ng-click="clientDashCtrl.viewClass(class.id)"><span class="glyphicon glyphicon-eye-open"></span> View Class Details</button>
+                            <button type="button" class="btn btn-default btn-xs pull-left" ng-click="clientDashCtrl.viewClass(class.class.id)"><span class="glyphicon glyphicon-eye-open"></span> View Class Details</button>
                         </div>
                     </div>
                 </div>
