--- a/client/views/clientdash.html
+++ b/client/views/clientdash.html
@@ -49,10 +49,10 @@
             <div class="panel panel-primary trainer-panel">
                 <div class="panel-heading">
                     <div class="row">
-                        <div class="col-lg-7">
+                        <div class="col-lg-6">
                             <b>{{class.name}}</b>
                         </div>
-                        <div class="col-lg-5">
+                        <div class="col-lg-6">
                             <b>Category:</b> {{class.category}}
                         </div>
                         
@@ -61,28 +61,28 @@
             
                 <div class="panel-body">
                     <div class="row pb-back">
-                        <img ng-src="../images/crossfit.jpg" width="498" height="200" ng-show="class.category == 'Crossfit'">
-                        <img ng-src="../images/core.jpg" width="498" height="200" ng-show="class.category == 'Core'">
-                        <img ng-src="../images/mma.jpg" width="498" height="200" ng-show="class.category == 'MMA'">
-                        <img ng-src="../images/boxing.jpg" width="498" height="200" ng-show="class.category == 'Boxing'">
-                        <img ng-src="../images/weights.jpg" width="498" height="200" ng-show="class.category == 'Weights'">
-                        <img ng-src="../images/aerobics.jpg" width="498" height="200" ng-show="class.category == 'Aerobics'">
+                        <img class="img-responsive" ng-src="../images/crossfit.jpg" width="498" height="200" ng-show="class.category == 'Crossfit'">
+                        <img class="img-responsive" ng-src="../images/core.jpg" width="498" height="200" ng-show="class.category == 'Core'">
+                        <img class="img-responsive" ng-src="../images/mma.jpg" width="498" height="200" ng-show="class.category == 'MMA'">
+                        <img class="img-responsive" ng-src="../images/boxing.jpg" width="498" height="200" ng-show="class.category == 'Boxing'">
+                        <img class="img-responsive" ng-src="../images/weights.jpg" width="498" height="200" ng-show="class.category == 'Weights'">
+                        <img class="img-responsive" ng-src="../images/aerobics.jpg" width="498" height="200" ng-show="class.category == 'Aerobics'">
                     </div>
                     <div class="row rowdata">
-                        <div class="col-lg-7">
-                            <b>Date/Time:</b> {{class.start_time}}
+                        <div class="col-lg-6">
+                            <b>Date/Time:</b> <br>{{class.start_time}}
                         </div>
-                        <div class="col-lg-5">
+                        <div class="col-lg-6">
                             <b>District:</b> {{class.neighbourhood}}
                         </div>
                     </div>
                 </div>
                 <div class="panel-footer">
                     <div class="row">
-                        <div class="col-lg-7">
+                        <div class="col-lg-6">
                             <b>Status:</b> {{class.status}}
                         </div>
-                        <div class="col-lg-5">
+                        <div class="col-lg-6">
                             <button type="button" class="btn btn-default btn-xs pull-left" ng-click="clientDashCtrl.viewClass(class.id)"><span class="glyphicon glyphicon-eye-open"></span> View Class Details</button>
                         </div>
                     </div>
