More refinements to dashboards and booking screens

--- a/client/views/mybookings.html
+++ b/client/views/mybookings.html
@@ -61,12 +61,12 @@
             
                 <div class="panel-body">
                     <div class="row pb-back">
-                        <img class="img-responsive" ng-src="../images/crossfit.jpg" width="498" height="200" ng-show="class.class.category == 'Crossfit'">
-                        <img class="img-responsive" ng-src="../images/core.jpg" width="498" height="200" ng-show="class.class.category == 'Core'">
-                        <img class="img-responsive" ng-src="../images/mma.jpg" width="498" height="200" ng-show="class.class.category == 'MMA'">
-                        <img class="img-responsive" ng-src="../images/boxing.jpg" width="498" height="200" ng-show="class.class.category == 'Boxing'">
-                        <img class="img-responsive" ng-src="../images/weights.jpg" width="498" height="200" ng-show="class.class.category == 'Weights'">
-                        <img class="img-responsive" ng-src="../images/aerobics.jpg" width="498" height="200" ng-show="class.class.category == 'Aerobics'">
+                        <img class="img-responsive" ng-src="../images/crossfit1.jpg" ng-show="class.class.category == 'Crossfit'">
+                        <img class="img-responsive" ng-src="../images/core1.jpg" ng-show="class.class.category == 'Core'">
+                        <img class="img-responsive" ng-src="../images/mma1.jpg" ng-show="class.class.category == 'MMA'">
+                        <img class="img-responsive" ng-src="../images/boxing1.jpg" ng-show="class.class.category == 'Boxing'">
+                        <img class="img-responsive" ng-src="../images/weights1.jpg" ng-show="class.class.category == 'Weights'">
+                        <img class="img-responsive" ng-src="../images/aerobics1.jpg" ng-show="class.class.category == 'Aerobics'">
                     </div>
                     <div class="row rowdata">
                         <div class="col-lg-6">
