--- a/client/views/trainerdash.html
+++ b/client/views/trainerdash.html
@@ -57,12 +57,12 @@
                     
                 <div class="panel-body">
                     <div class="row pb-back">
-                        <img class="img-responsive" ng-src="../images/crossfit.jpg" ng-show="class.category == 'Crossfit'">
-                        <img class="img-responsive" ng-src="../images/core.jpg" ng-show="class.category == 'Core'">
-                        <img class="img-responsive" ng-src="../images/mma.jpg" ng-show="class.category == 'MMA'">
-                        <img class="img-responsive" ng-src="../images/boxing.jpg" ng-show="class.category == 'Boxing'">
-                        <img class="img-responsive" ng-src="../images/weights.jpg" ng-show="class.category == 'Weights'">
-                        <img class="img-responsive" ng-src="../images/aerobics.jpg" ng-show="class.category == 'Aerobics'">
+                        <img class="img-responsive" ng-src="../images/crossfit1.jpg" ng-show="class.category == 'Crossfit'">
+                        <img class="img-responsive" ng-src="../images/core1.jpg" ng-show="class.category == 'Core'">
+                        <img class="img-responsive" ng-src="../images/mma1.jpg" ng-show="class.category == 'MMA'">
+                        <img class="img-responsive" ng-src="../images/boxing1.jpg" ng-show="class.category == 'Boxing'">
+                        <img class="img-responsive" ng-src="../images/weights1.jpg" ng-show="class.category == 'Weights'">
+                        <img class="img-responsive" ng-src="../images/aerobics1.jpg" ng-show="class.category == 'Aerobics'">
                     </div>
                     <div class="row rowdata">
                         <div class="col-lg-6">
