Changes to trainerdash and profile page

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -421,6 +421,11 @@ hr.style14 {
     margin-top: 15px;
 }
 
+.classname {
+    font-size: 15px;
+    color: wheat;
+}
+
 /* ---------------------------------------------------
     CLIENT PANEL
 ----------------------------------------------------- */
