Changes from trainer dashboard transposed to client dash and bookings

--- a/client/views/clientdash.html
+++ b/client/views/clientdash.html
@@ -49,13 +49,9 @@
             <div class="panel panel-primary trainer-panel">
                 <div class="panel-heading">
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-lg-12 classname">
                             <b>{{class.name}}</b>
                         </div>
-                        <div class="col-lg-6">
-                            <b>Category:</b> {{class.category}}
-                        </div>
-                        
                     </div>
                 </div>
             
@@ -74,6 +70,8 @@
                         </div>
                         <div class="col-lg-6">
                             <b>District:</b> {{class.neighbourhood}}
+                            <br>
+                            <b>Category:</b> {{class.category}}
                         </div>
                     </div>
                 </div>
